// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cascader > options 1`] = `<div />`;

exports[`Cascader > options with format 1`] = `<div />`;

exports[`Cascader > options with valueKey/textKey/childrenKey 1`] = `<div />`;

exports[`Cascader > value 1`] = `<div />`;

exports[`Cascader > visible true 1`] = `
<div>
  <div
    class="nut-overlay"
    style="--nutui-overlay-zIndex: 1000;"
  />
  <div
    class="nut-popup nut-popup-round nut-popup-bottom"
    style="z-index: 1000;"
  >
    <div
      class="nut-cascader "
    >
      <div
        class="nut-tabs nut-tabs-horizontal"
      >
        <div
          class="nut-tabs-titles nut-tabs-titles-line nut-tabs-titles-scrollable"
        >
          <div
            class="nut-tabs-titles-item "
          >
            <span
              class="nut-tabs-titles-item-text"
            >
              福建
            </span>
            <span
              class="nut-tabs-titles-item-line"
            />
          </div>
          <div
            class="nut-tabs-titles-item "
          >
            <span
              class="nut-tabs-titles-item-text"
            >
              福州
            </span>
            <span
              class="nut-tabs-titles-item-line"
            />
          </div>
          <div
            class="nut-tabs-titles-item nut-tabs-titles-item-active"
          >
            <span
              class="nut-tabs-titles-item-text"
            >
              鼓楼区
            </span>
            <span
              class="nut-tabs-titles-item-line"
            />
          </div>
        </div>
        <div
          class="nut-tabs-content-wrap"
        >
          <div
            class="nut-tabs-content"
            style="transform: translate3d(-200%, 0, 0); transition-duration: 300ms;"
          >
            <div
              class="nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    浙江
                  </div>
                </div>
                <div
                  class="disabled nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    湖南
                  </div>
                </div>
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    福建
                  </div>
                  <svg
                    aria-labelledby="Check"
                    class="nut-icon nut-icon-Check nut-cascader-icon-check"
                    role="presentation"
                    viewBox="0 0 49 48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M45.121 16.121 47.243 14 43 9.757l-2.121 2.122L19 33.757 7.121 21.88 5 19.757.757 24l2.122 2.121L14.757 38l2.122 2.121L19 42.243l2.121-2.122L23.243 38z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    福州
                  </div>
                  <svg
                    aria-labelledby="Check"
                    class="nut-icon nut-icon-Check nut-cascader-icon-check"
                    role="presentation"
                    viewBox="0 0 49 48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M45.121 16.121 47.243 14 43 9.757l-2.121 2.122L19 33.757 7.121 21.88 5 19.757.757 24l2.122 2.121L14.757 38l2.122 2.121L19 42.243l2.121-2.122L23.243 38z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="nut-tabpane active"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    鼓楼区
                  </div>
                  <svg
                    aria-labelledby="Check"
                    class="nut-icon nut-icon-Check nut-cascader-icon-check"
                    role="presentation"
                    viewBox="0 0 49 48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M45.121 16.121 47.243 14 43 9.757l-2.121 2.122L19 33.757 7.121 21.88 5 19.757.757 24l2.122 2.121L14.757 38l2.122 2.121L19 42.243l2.121-2.122L23.243 38z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </div>
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    台江区
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader > visible true 2`] = `
<div
  class="active nut-cascader-item"
>
  <div
    class="nut-cascader-item-title"
  >
    鼓楼区
  </div>
  <svg
    aria-labelledby="Check"
    class="nut-icon nut-icon-Check nut-cascader-icon-check"
    role="presentation"
    viewBox="0 0 49 48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M45.121 16.121 47.243 14 43 9.757l-2.121 2.122L19 33.757 7.121 21.88 5 19.757.757 24l2.122 2.121L14.757 38l2.122 2.121L19 42.243l2.121-2.122L23.243 38z"
      fill="currentColor"
      fill-opacity="0.9"
    />
  </svg>
</div>
`;
